
 * Add the Chinese language support.
   For more information please refer to srch2's documentation (http://srch2.com/releases/4.4.2/docs/configuration/#116-analyzer/)

 * Improved Access Control.
 -------------------------------------------------------------------
